css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;

  font-family: 'Rubik Mono One', sans-serif;
  font-family: 'Rubik', sans-serif;
  color: #191815;

  margin-left: 0.65rem;
  margin-right: 0.65rem;

  background-color: #fff;
}

*, *::before, *::after {
  box-sizing: inherit;
}

/** EXTRA TYPE FORMATING **/

p {
  font-weight: 300;
}

.strong, strong {
  font-weight: 500;
}

.med {
  font-weight: 400;
}

.blue {
  color: #9dedf2;
}

.pink {
  color: #fe7ca1;
}

.yellow {
  color: #ffcb00;
}

.light {
  color: #b3b3b3;
}

.logo {
  height: 32px;
}

.mono {
  font-family: 'Rubik Mono One', sans-serif;
}

.rule-b {
  border-bottom: #000 solid 8px;
}

.rule-t {
  border-top: #000 solid 8px;
}



/** LINKS **/

a {
  color: #000;
  text-decoration: none;
}

.line-t {
  border-top: #fff solid 4px;
}

.line-t:hover {
  border-top: #000 solid 4px;
}

.line-b {
  border-bottom: #fff solid 4px;
}

.line-b:hover {
  border-bottom: #000 solid 4px;
}

.pink-box {
  border: #000 solid 4px;
  padding: 0.25em 0.5em;
  display: inline-block;
  background: none;
}

.pink-box:hover {
  background: #ffafac;
}

.blue-box {
  color: #000;
  border: #000 solid 4px;
  padding: 0.25em 0.5em;
  display: inline-block;
  background: none;
}

.blue-box:hover {
  background: #9dedf2;
}

#contact-icon, .st0, .contact-icon {
  fill: #e6e6e6;
  color: #e6e6e6;
}

#contact-icon:hover, .st0:hover, .contact-icon:hover {
  fill: #000;
  color: #000;
}

.current {
  border-bottom: #000 solid 4px;
}

.current-sub {
  border-top: #000 solid 4px;
}


.scroll {
    width:100%;
    height: 5%;
    overflow-y:scroll
}

/*VIDEO*/

.embed-container {
  position: relative;
  padding-bottom: 56.25%;
  height: 0; overflow: hidden;
  max-width: 100%; height: auto;
}

.embed-container iframe, .embed-container object, .embed-container embed {
  position: absolute; top: 0;
  left: 0; width: 100%;
  height: 100%;
}



/* LAYOUT */


@media only screen and (min-width: 38em) {

  html {
    margin-left: 2.4rem;
    margin-right: 2.4rem;
  }

  .x-text-left {
    text-align: left;
  }

  .info {
    padding-top: 0;
  }

  .x-text-right {
    text-align: right;
  }

  .x-gutter-2 {
    padding-left: 1.8000rem;
    padding-right: 1.8000rem;;
  }

  .x-right {
    float: right;
  }

}

@media only screen and (min-width: 60em) {

  html {
    margin-left: 6rem;
    margin-right: 6rem;
  }

  .header {
    margin: 0;
  }

  .x-gutter-2 {
    padding-left: 3.0000rem;
    padding-right: 3.0000rem;
  }

}

@media only screen and (min-width: 90em) {

}

